--- a/locales/ar.json
+++ b/locales/ar.json
@@ -11,7 +11,7 @@
   "home": {
     "title": "حُراس الثغور - الرئيسية",
     "description": "منصة حُراس الثغور لتعزيز الدعوة الإسلامية",
-    "welcome": "مرحباً بك في منصة حُراس",
+    "welcome": "مرحباً بك في منصة حُراس الثغور",
     "about": "نبذة عن الفريق",
     "aboutText": "فريق حراس هو مجموعة من الدعاة والمتخصصين في مجال الدعوة الإسلامية، يسعون لنشر المعرفة الصحيحة عن الإسلام وتقديم المواد الدعوية المفيدة.",
     "sections": "أقسام الموقع",
