Enhance PDF viewer functionality and styles; update localization for improved user experience; refactor metadata handling in magazine and PDF view pages.

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -22,14 +22,20 @@
     "description": "تصفح أعداد المجلة وملفات PDF بأعلى جودة",
     "latestIssues": "آخر الإصدارات",
     "allIssues": "جميع الإصدارات",
-    "categories": "التصنيفات",
-    "readNow": "اقرأ الآن",
+    "categories": "التصنيفات",    "readNow": "اقرأ الآن",
     "download": "تحميل",
-    "previousPage": "الصفحة السابقة",
-    "nextPage": "الصفحة التالية",
+    "previousPage": "السابق",
+    "nextPage": "التالي",
     "zoomIn": "تكبير",
     "zoomOut": "تصغير",
-    "loading": "جاري التحميل..."
+    "loading": "جاري التحميل...",
+    "error": "خطأ في تحميل الملف",
+    "search": "البحث في المستند",
+    "thumbnails": "الصور المصغرة",
+    "fullscreen": "ملء الشاشة",
+    "fitWidth": "ملائمة العرض",
+    "fitPage": "ملائمة الصفحة",
+    "print": "طباعة"
   },
   "dawah": {
     "title": "الدعوة لغير المسلمين",
@@ -48,12 +54,23 @@
     "pdfs": "ملفات PDF",
     "browsePDFs": "تصفح ملفات PDF",
     "viewPDF": "عرض الملف",
-    "noPDFsFound": "لم يتم العثور على ملفات PDF",
-    "search": "بحث",
+    "noPDFsFound": "لم يتم العثور على ملفات PDF",    "search": "بحث",
     "searchPlaceholder": "ابحث عن ملفات PDF...",
     "download": "تحميل",
     "preview": "معاينة",
-    "viewAll": "عرض الكل"
+    "viewAll": "عرض الكل",
+    "previousPage": "السابق",
+    "nextPage": "التالي",
+    "zoomIn": "تكبير",
+    "zoomOut": "تصغير",
+    "loading": "جاري التحميل...",
+    "error": "خطأ في تحميل الملف",
+    "searchInDocument": "البحث في المستند",
+    "thumbnails": "الصور المصغرة",
+    "fullscreen": "ملء الشاشة",
+    "fitWidth": "ملائمة العرض",
+    "fitPage": "ملائمة الصفحة",
+    "print": "طباعة"
   },
   "contact": {
     "title": "اتصل بنا",
