--- a/locales/en.json
+++ b/locales/en.json
@@ -22,14 +22,20 @@
     "description": "Browse magazine issues and PDF files with high quality",
     "latestIssues": "Latest Issues",
     "allIssues": "All Issues",
-    "categories": "Categories",
-    "readNow": "Read Now",
+    "categories": "Categories",    "readNow": "Read Now",
     "download": "Download",
-    "previousPage": "Previous Page",
-    "nextPage": "Next Page",
+    "previousPage": "Previous",
+    "nextPage": "Next",
     "zoomIn": "Zoom In",
     "zoomOut": "Zoom Out",
-    "loading": "Loading..."
+    "loading": "Loading...",
+    "error": "Error loading PDF",
+    "search": "Search in document",
+    "thumbnails": "Thumbnails",
+    "fullscreen": "Fullscreen",
+    "fitWidth": "Fit Width",
+    "fitPage": "Fit Page",
+    "print": "Print"
   },
   "dawah": {
     "title": "Dawah Outreach",
@@ -48,12 +54,23 @@
     "pdfs": "PDF Files",
     "browsePDFs": "Browse PDF Files",
     "viewPDF": "View PDF",
-    "noPDFsFound": "No PDF files found",
-    "search": "Search",
+    "noPDFsFound": "No PDF files found",    "search": "Search",
     "searchPlaceholder": "Search PDF files...",
     "download": "Download",
     "preview": "Preview",
-    "viewAll": "View All"
+    "viewAll": "View All",
+    "previousPage": "Previous",
+    "nextPage": "Next",
+    "zoomIn": "Zoom In",
+    "zoomOut": "Zoom Out",
+    "loading": "Loading...",
+    "error": "Error loading PDF",
+    "searchInDocument": "Search in document",
+    "thumbnails": "Thumbnails",
+    "fullscreen": "Fullscreen",
+    "fitWidth": "Fit Width",
+    "fitPage": "Fit Page",
+    "print": "Print"
   },
   "contact": {
     "title": "Contact Us",
