Remove copy-pdf-worker.js script as it is no longer needed for PDF worker file management.

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -1,5 +1,4 @@
-{
-  "common": {
+{  "common": {
     "language": "العربية",
     "switchLanguage": "English",
     "home": "الرئيسية",
@@ -15,9 +14,10 @@
     "share": "مشاركة",
     "items": "عنصر",
     "loading": "جاري التحميل...",
-    "sending": "جاري الإرسال...",
-    "madeWith": "صُنع بكل حب",
-    "by": "بواسطة"
+    "sending": "جاري الإرسال...",    "madeWith": "صُنع بكل حب",
+    "by": "بواسطة",
+    "goToLibrary": "الذهاب إلى المكتبة",
+    "siteName": "حُراس الثغور"
   },
   "home": {
     "title": "حُراس الثغور - الرئيسية",
@@ -46,11 +46,36 @@
     "loading": "جاري التحميل...",
     "error": "خطأ في تحميل الملف",
     "search": "البحث في المستند",
-    "thumbnails": "الصور المصغرة",
-    "fullscreen": "ملء الشاشة",
+    "thumbnails": "الصور المصغرة",    "fullscreen": "ملء الشاشة",
     "fitWidth": "ملائمة العرض",
     "fitPage": "ملائمة الصفحة",
-    "print": "طباعة"
+    "print": "طباعة",
+    "issues": {
+      "issue1": {
+      "title": "ليسوا قرآنيين: الفطرة والميثاق",
+      "description": "استكشاف مفهوم الفطرة والميثاق والمفهوم المقيد للعبادة في الفكر الإسلامي",
+      "date": "2025",
+      "author": "قسم اللاهوت الإسلامي"
+      },
+      "issue2": {
+      "title": "توحيد الألوهية وضعف الملكة اللغوية",
+      "description": "دراسة حول عقيدة توحيد الألوهية وأثر ضعف الملكة اللغوية في الإنكار على ما ليس حقه الإنكار",
+      "date": "2025",
+      "author": "د. عبد الله اللغوي"
+      },
+      "issue3": {
+      "title": "دلائل النبوة ومعركة الزلاقة",
+      "description": "تحليل دلائل النبوة، مع الرد على الروايات المستشرقين والشبهات، بما في ذلك معركة الزلاقة",
+      "date": "2025",
+      "author": "مجلس الدراسات التاريخية"
+      }
+    },
+    "categoryNames": {
+      "aqeedah": "العقيدة",
+      "fiqh": "الفقه", 
+      "prophetBiography": "السيرة النبوية",
+      "islamicHistory": "التاريخ الإسلامي"
+    }
   },
   "dawah": {
     "title": "الدعوة لغير المسلمين",
@@ -142,8 +167,7 @@
       "howToPray": "كيف تصلي",
       "supplications": "أدعية من القرآن والسنة"
     }
-  },
-  "contact": {
+  },  "contact": {
     "title": "اتصل بنا",
     "description": "نحن نحب أن نسمع منك. أرسل لنا رسالة أو تواصل معنا مباشرة.",
     "name": "الاسم",
@@ -162,21 +186,35 @@
     "callUs": "اتصلوا بنا",
     "address": "123 شارع المثال، القاهرة، مصر",
     "email_contact": "contact@hurass-al-thughur.org",
-    "phone": "+20 12 3456 7890"
-  },
-  "footer": {
+    "phone": "+20 12 3456 7890",
+    "formTitle": "نموذج الاتصال",
+    "thankYou": "شكراً لك على رسالتك! سنعود إليك قريباً.",
+    "sendAnother": "إرسال رسالة أخرى"
+  },  "footer": {
     "rightsReserved": "© 2025 حُراس الثغور. جميع الحقوق محفوظة.",
     "terms": "الشروط والأحكام",
     "privacy": "سياسة الخصوصية",
     "quickLinks": "روابط سريعة",
     "contactUs": "تواصل معنا",
     "followUs": "تابعنا",
-    "aboutFooter": "منصة دعوية تسعى لنشر المعرفة الصحيحة عن الإسلام"
-  },
-  "notFound": {
+    "aboutFooter": "منصة دعوية تسعى لنشر المعرفة الصحيحة عن الإسلام",
+    "location": "المملكة العربية السعودية",
+    "authorName": "محمود المنسي",
+    "logoText": "حُراس الثغور",
+    "logoDescription": "منصة دعوية تسعى لنشر المعرفة الصحيحة عن الإسلام",
+    "madeWith": "صُنع بكل حب",
+    "by": "بواسطة"
+  },  "notFound": {
     "title": "لم يتم العثور على الملف",
     "message": "ملف PDF الذي تبحث عنه غير موجود أو تم نقله.",
-    "backToLibrary": "العودة إلى المكتبة"
+    "backToLibrary": "العودة إلى المكتبة",
+    "fileNotFound": "الملف غير موجود",
+    "fileMessage": "عذرًا، لم نتمكن من العثور على ملف PDF المطلوب.",
+    "returnToLibrary": "العودة إلى المكتبة",
+    "goToLibrary": "الذهاب إلى المكتبة",
+    "pageNotAvailable": "الصفحة غير متاحة",
+    "selectPDF": "يرجى تحديد ملف PDF لعرضه من صفحة المكتبة.",
+    "goToHome": "الذهاب إلى الصفحة الرئيسية"
   },
   "errors": {
     "pdfNotFound": "لم يتم العثور على ملف PDF",
