Refactor AnimatedComponents and update service worker
- Updated import path for useCSSOptimization in AnimatedComponents.tsx
- Simplified item mapping in AnimatedNavigation component
- Added empty divs to Motion components for better structure
- Enhanced loading state animations with empty divs
- Updated service worker (sw.js) with new asset revisions and improved caching strategies
- Created new MagazineSearchWrapper.tsx component file

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -68,6 +68,12 @@
       "description": "تحليل دلائل النبوة، مع الرد على الروايات المستشرقين والشبهات، بما في ذلك معركة الزلاقة",
       "date": "2025",
       "author": "مجلس الدراسات التاريخية"
+      },
+      "issue4": {
+        "title": "جوامع أدعية النبي وتعوذاته",
+        "description": "مجموعة شاملة من أدعية النبي محمد صلى الله عليه وسلم وتعوذاته من مختلف الأضرار",
+        "date": "2025",
+        "author": "قسم الدراسات الإسلامية"
       }
     },
     "categoryNames": {
