feat: Enhance PDF viewer functionality with mobile support and improved controls

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -46,10 +46,14 @@
     "loading": "جاري التحميل...",
     "error": "خطأ في تحميل الملف",
     "search": "البحث في المستند",
-    "thumbnails": "الصور المصغرة",    "fullscreen": "ملء الشاشة",
+    "thumbnails": "الصور المصغرة",    
+    "fullscreen": "ملء الشاشة",
     "fitWidth": "ملائمة العرض",
     "fitPage": "ملائمة الصفحة",
     "print": "طباعة",
+    "single": "عدد مفرد",
+    "continuous": "صفحات متصلة",
+    "facing": "صفحات متقابلة",
     "issues": {
       "issue1": {
       "title": "ليسوا قرآنيين: الفطرة والميثاق",
