feat: Refactor magazine pages to utilize localized messages for improved accessibility and maintainability

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -317,8 +317,13 @@
     "exploreSections": "استكشف أقسام مختلفة من المجلة وتصفح المحتوى حسب اهتماماتك",
     "browse": "تصفح",
     "issuesInCategory": "إصدارات في هذا التصنيف",
-    "issueWord": "الإصدارات",
-    "pageWord": "الصفحات",
+    "issueWord": "الإصدارات",    "pageWord": "الصفحات",
+    "issues": "إصدارات",
+    "pages": "صفحات", 
+    "issuesOf": "إصدارات",
+    "issueInThisCategory": "إصدار في هذا التصنيف",
+    "issuesInThisCategory": "إصدارات في هذا التصنيف",
+    "noIssuesYetDescription": "لم يتم نشر أي إصدارات في هذا التصنيف حتى الآن. تحقق مرة أخرى لاحقاً.",
     "noIssuesYet": "لا توجد إصدارات بعد",
     "noIssuesPublished": "لم يتم نشر أي إصدارات في هذا التصنيف بعد. تحقق مرة أخرى لاحقاً.",
     "browseAllIssues": "تصفح جميع الإصدارات",
