--- a/locales/en.json
+++ b/locales/en.json
@@ -309,8 +309,13 @@
     "exploreSections": "Explore different sections of the magazine and browse content by your interests",
     "browse": "Browse",
     "issuesInCategory": "issues in this category",
-    "issueWord": "Issues",
-    "pageWord": "Pages",
+    "issueWord": "Issues",    "pageWord": "Pages",
+    "issues": "Issues", 
+    "pages": "Pages",
+    "issuesOf": "Issues of",
+    "issueInThisCategory": "issue in this category",
+    "issuesInThisCategory": "issues in this category",
+    "noIssuesYetDescription": "No issues have been published in this category yet. Check back later.",
     "noIssuesYet": "No Issues Yet",
     "noIssuesPublished": "No issues have been published in this category yet. Check back later.",
     "browseAllIssues": "Browse All Issues",
